log
Thu Apr 21 17:55:19 UTC 2022: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:35: error: ‘key1’ undeclared (first use in this function); did you mean ‘key_t’?
   int resultado = map->lower_than(key1,key2);
                                   ^~~~
                                   key_t
treemap.c:45:35: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:45:40: error: ‘key2’ undeclared (first use in this function); did you mean ‘key1’?
   int resultado = map->lower_than(key1,key2);
                                        ^~~~
                                        key1
Compilation failed
7c4b98d
Thu Apr 21 18:01:19 UTC 2022: 
 treemap.c | 18 +-----------------
 1 file changed, 1 insertion(+), 17 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:21: error: ‘lt’ undeclared (first use in this function)
   map->lower_than = lt;
                     ^~
treemap.c:41:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
60e7777
Thu Apr 21 18:01:34 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   map->lower_than = lt;
                   ^
treemap.c:42:19: error: ‘lt’ is used uninitialized in this function [-Werror=uninitialized]
   map->lower_than = lt;
   ~~~~~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
32dbc05
Thu Apr 21 18:01:58 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:22: error: invalid type argument of unary ‘*’ (have ‘int’)
   map->lower_than = (*lt);
                      ^~~
Compilation failed
7c2f5d8
Thu Apr 21 18:02:16 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   map->lower_than = (lt);
                   ^
treemap.c:42:19: error: ‘lt’ is used uninitialized in this function [-Werror=uninitialized]
   map->lower_than = (lt);
   ~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
44a9f22
Thu Apr 21 18:03:09 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3262d1a
Thu Apr 21 20:02:30 UTC 2022: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:13: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
      return nodeKey;
             ^~~~~~~
treemap.c:88:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return nodeKey;
                  ^~~~~~~
treemap.c:95:18: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
           return nodeKey;
                  ^~~~~~~
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8cf2462
Thu Apr 21 20:03:36 UTC 2022: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
5303a30
Thu Apr 21 20:13:07 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:12: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
        if (nodeKey = NULL)  break;
            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
72dcdfd
Thu Apr 21 20:14:17 UTC 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  8|7
total_score: 5/70
897afdf
Thu Apr 21 20:14:52 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 5/70
0ebaa6e
Thu Apr 21 20:18:06 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
1d55721
